force-app/main/default/objects/PDF__c/PDF__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PDF</label>
</CustomObject>