force-app/main/default/objects/PDF__c/fields/AR_Signature__c.field-meta.xml
<CustomField>
    <fullName>AR_Signature__c</fullName>
    <label>AR Signature</label>
    <type>Url</type>
</CustomField>