force-app/main/default/objects/PDF__c/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <label>logo</label>
    <type>Url</type>
</CustomField>