force-app/main/default/objects/PDF__c/fields/MX_Signature__c.field-meta.xml
<CustomField>
    <fullName>MX_Signature__c</fullName>
    <label>MX Signature</label>
    <type>Url</type>
</CustomField>